# HoloQRam-prototype

./: .gitignore  CMakeLists.txt  README.md
include/core/: Camera.hpp
include/graphics/: RenderManager.hpp
include/hologram/compression/: CompressionScheme.hpp  OctreeCompression.hpp  RLECompression.hpp  TemporalCompression.hpp  ViVoCompression.hpp  VisibilityAwareCompression.hpp
include/hologram/core/: Camera.hpp  PointCloud.hpp
include/hologram/graphics/: RenderManager.hpp  Shaders.hpp
include/hologram/network/: AdaptiveNetworkControl.hpp  BaseClient.hpp  DecompressionManager.hpp  NetworkManager.hpp  NetworkMetrics.hpp  NetworkProtocol.hpp  OffscreenClient.hpp  ReliableNetworkManager.hpp  VolumetricClient.hpp
include/hologram/server/: CellManager.hpp  StreamingServer.hpp  VolumetricServer.hpp
include/hologram/utils/: GlmHash.hpp
include/network/: BaseClient.hpp  DecompressionManager.hpp  NetworkManager.hpp  OctreeCompression.hpp  OffscreenClient.hpp  RLECompression.hpp  VolumetricClient.hpp
include/server/: VolumetricServer.hpp
scripts/: run.sh  setup_glad.sh
src/: Camera.cpp  DecompressionManager.cpp  NetworkManager.cpp  RenderManager.cpp  RenderManager.hpp  TextRenderer.cpp  VolumetricClient.cpp  VolumetricClient.hpp  client.cpp  main.cpp  offscreen_main.cpp
src/apps/: client_main.cpp  offscreen_main.cpp  server_main.cpp
src/client/src/: main.cpp
src/compression/: CellReconstructor.cpp  CompressionScheme.cpp  OctreeCompression.cpp  RLECompression.cpp  TemporalCompression.cpp  ViVoCompression.cpp  VisibilityAwareCompression.cpp
src/core/: Camera.cpp
src/graphics/: RenderManager.cpp  TextRenderer.cpp
src/network/: AdaptiveNetworkControl.cpp  BaseClient.cpp  CompressionScheme.cpp  DecompressionManager.cpp  NetworkManager.cpp  NetworkMetrics.cpp  OctreeCompression.cpp  OffscreenClient.cpp  OffscreenClient.hpp  RLECompression.cpp  ReliableNetworkManager.cpp  VolumetricClient.cpp  server.cpp
src/server/: CellManager.cpp  StreamingServer.cpp  VolumetricServer.cpp
src/server/src/: VolumetricServer.cpp  main.cpp
